# sentinel

./: .gitignore  DESIGN.md  index.html  instrumentation.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
docs/: index.html
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  mobile_server.rs
src-tauri/src/analysis/: draft.rs  improvement.rs  items.rs  live_timeline.rs  mod.rs  patterns.rs  post_game.rs
src-tauri/src/database/: migrations.rs  mod.rs  schema.rs
src-tauri/src/game_client/: mod.rs  poller.rs  state.rs  types.rs
src-tauri/src/lcu/: champ_select.rs  connector.rs  lockfile.rs  mod.rs  runes.rs  tls.rs  types.rs  websocket.rs
src-tauri/src/riot_api/: client.rs  ddragon.rs  fetcher.rs  mod.rs  opgg.rs  rate_limiter.rs  types.rs
src/lib/components/: AppShell.svelte  ConnectionIndicator.svelte  MatchCard.svelte  Sidebar.svelte  StatusBar.svelte
src/lib/components/draft/: BanTracker.svelte  DraftRecommendations.svelte  PlayerSlot.svelte  TeamPanel.svelte
src/lib/components/live/: GameTimer.svelte  GoldDiffGraph.svelte  ObjectiveTimers.svelte  (+4 more)
src/lib/stores/: champions.ts  champselect.ts  connection.ts  gameflow.ts  livegame.ts  router.ts
src/lib/types/: champselect.ts  index.ts  livegame.ts
src/routes/: ChampSelect.svelte  Dashboard.svelte  ImprovementTracker.svelte  LiveGame.svelte  MatchHistory.svelte  MiniOverlay.svelte  Patterns.svelte  PostGame.svelte  Settings.svelte
